--- a/index.html
+++ b/index.html
@@ -37,6 +37,46 @@
         </div>
     </div>
 </section>
+<!-- this is about us section -->
+<section>
+    <h1 class="title about-title">About us</h1>
+    <div class="about-container">
+        <div class="about-info">
+            <h1>We grow brands through
+            bold & strategic creative</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <button class="btn">Contact Us</button>
+        </div>
+        <div class="about-photo">
+            <img class="banner-img" src="./icon/section.png" alt="">
+        </div>
+    </div>
+</section>
+<!-- service section start here -->
+<section>
+    <h1 class="title about-title">Services</h1>
+    <div class="service-container">
+        <div class="box">
+            <img class="icon" src="./icon/block1.png" alt="">
+        <h2 class="box-title">Web development</h2>
+        <p class="box-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, quas ipsa?</p>
+        <button class="btn box-btn">Details</button>
+        </div>
+        <div class="box">
+            <img class="icon" src="./icon/block2.png" alt="">
+        <h2 class="box-title">Graphic Design</h2>
+        <p class="box-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, quas ipsa?</p>
+        <button class="btn box-btn">Details</button>
+        </div>
+        <div class="box">
+            <img class="icon" src="./icon/block3.png" alt="">
+        <h2 class="box-title">Digital Marketing</h2>
+        <p class="box-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, quas ipsa?</p>
+        <button class="btn box-btn">Details</button>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
